[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=4]
[ext_resource path="res://Art/Kenney Future Narrow.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sounds/sound(1).wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/sound(2).wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 649.5, 4.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46.5, 362 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 5 )

[sub_resource type="Environment" id=5]
background_mode = 4
glow_enabled = true
glow_intensity = 1.18
glow_bloom = 0.22
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 639.5, -10 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 3, 738 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 639.5, -10 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 1224, 367 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 635, 337 )

[node name="PlayerScore" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerScore"]
position = Vector2( 1330, 359 )
shape = SubResource( 2 )

[node name="EnemyScore" type="Area2D" parent="."]
position = Vector2( -1368, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyScore"]
position = Vector2( 1319.5, 359 )
shape = SubResource( 2 )

[node name="EnemyScoreText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_right = 227.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="PlayerScoreText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="BadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="WhatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="PlayerScore" to="." method="_on_PlayerScore_body_entered"]
[connection signal="body_entered" from="EnemyScore" to="." method="_on_EnemyScore_body_entered"]
